<resources>
    <string name="app_name">alphamind</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_exercise_form">ExerciseForm</string>

    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="delete">Delete</string>
    <string name="page_title">AlphaMind</string>
    <string name="title_activity_exercise_settings">ExerciseSettingsActivity</string>
    <string name="exercises_for_the_day">Exercises for the day</string>

    <string name="exercise_type">Exercise: </string>
    <string name="set_number">Set #:</string>
    <string name="weight">Weight:</string>
    <string name="rep_number">Rep #:</string>
    <string name="notes">Notes: </string>
    <string name="logs">Logs: </string>
    <string name="total_volume">Total Volume: </string>
    <string name="update_confirm_title">Log Update Confirmation: </string>
    <string name="update_confirm_text">Would you like to update the exercise log?</string>
    <string name="update">Update</string>

    <string name="delete_all">Delete All</string>
    <string name="delete_one">Delete</string>
    <string name="arms_filter">Arms Only</string>
    <string name="back_filter">Back Only</string>
    <string name="chest_filter">Chest Only</string>
    <string name="legs_filter">Legs Only</string>
    <string name="pull_filter">Pull Only</string>
    <string name="push_filter">Push Only</string>
    <string name="all_exercises">All Exercises</string>
    <string name="remote_save">Save To Cloud</string>
    <string name="local_save">Save to CSV</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_calender_view">CalenderView</string>
    <string name="title_activity_charts">ChartsActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="title_activity_authentication">Authentication</string>

    <!-- For Firebase Google Auth -->
<!--    <string name="default_web_client_id">86428497661-qs4p0barmpfupmterlmoa822kbrek43v.apps.googleusercontent.com</string>-->
</resources>