<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_bar"
    tools:context="com.example.alphamind.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_all"
        android:orderInCategory="100"
        android:title="@string/delete_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete_one"
        android:orderInCategory="100"
        android:title="@string/delete_one"
        app:showAsAction="never" />
    <item
        android:id="@+id/save_log"
        android:icon="@drawable/ic_baseline_add_box_24"
        app:showAsAction="always"
        android:title="Save">
    </item>
    <item
        android:id="@+id/calendar_view"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        app:showAsAction="always"
        android:title="Calendar">
    </item>
    <item
        android:id="@+id/charts"
        android:icon="@drawable/ic_baseline_bar_chart_24"
        app:showAsAction="always"
        android:title="Charts">
    </item>
</menu>