<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/page_title"
            app:menu="@menu/menu_main"
            app:navigationIcon="@drawable/ic_menu_24"
            android:background="@color/autumn_dark_1"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/exercise_type">

    <AutoCompleteTextView
            android:id="@+id/exercise_list"
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:hint="@string/set_number">

            <AutoCompleteTextView
                android:id="@+id/set_number"
                android:layout_margin="2dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_weight="5"
            android:layout_height="wrap_content"
            android:hint="@string/rep_number">

            <AutoCompleteTextView
                android:id="@+id/rep_number"
                android:layout_margin="1dp"
                android:layout_width="205dp"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight">

        <AutoCompleteTextView
            android:id="@+id/weight"
            android:layout_margin="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/ti_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notes">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/notes"
            android:layout_margin="2dp"
            android:gravity="top|start"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/ti_logs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/logs">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/logs"
            android:layout_margin="2dp"
            android:gravity="top|start"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:inputType="textMultiLine"
            />

    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>